Fixed contrast on close button in preview.

--- a/src/main/javascript/app/modules/analyze/components/pivot/preview/analyze-pivot-preview.component.scss
+++ b/src/main/javascript/app/modules/analyze/components/pivot/preview/analyze-pivot-preview.component.scss
@@ -26,6 +26,7 @@ analyze-pivot-preview {
 
         md-icon {
           font-size: 40px;
+          color: white !important;
         }
       }
     }
